<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LetsGo</string>
    <string name="app_human_name">&app_human_name;</string>
    <string name="general_error">ERROR</string>
    <string name="unmanageable_error_occurred">An error has occurred.</string>
    <string name="function_called_too_quickly_error">An error occurred with this action. Please try again later.</string>
    <string name="general_logo_content_description">&app_human_name; Logo</string>
    <string name="shared_preferences_lets_go_key">lets_go_app_shared_preferences_key</string>
    <string name="shared_preferences_version_code_key">version_code_key</string>
    <string name="shared_preferences_installation_id">installation_id</string>
    <string name="shared_preferences_tutorial_shown_key">tutorial_shown</string>
    <string name="shared_preferences_most_recent_chat_message_time">chat_message_time</string>
    <string name="general_connection_error">Connection Error</string>
    <string name="server_down_error">Server is temporarily down.</string>
    <string name="general_login_token_expired">@string/general_connection_error</string>
    <string name="general_placeholder">PLACEHOLDER</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Enable">Enable</string>
    <string name="You">You</string>
    <string name="You_have">You have</string>
    <string name="You_were_space">You were </string>
    <string name="User_has">%1$s has</string>
    <string name="Has"> has</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Admin">Admin</string>
    <string name="User">User</string>
    <string name="New_match">New Match</string>
    <string name="Chat_room">Chat Room</string>
    <string name="un_match">UnMatch</string>
    <string name="password">Password</string>
    <string name="lowercase_password">password</string>
    <string name="pinned_location">pinned location</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="lowercase_name">name</string>
    <string name="user">User</string>
    <string name="Continue">Continue</string>
    <string name="IAccept">I Accept</string>
    <string name="Info">Info</string>
    <string name="delete">Delete</string>
    <string name="edited">&edited;</string>
    <string name="deleted">deleted</string>
    <string name="space">\u0020</string>
    <string name="info">info</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_activities">Select Activities</string>
    <string name="local_event">Local Event</string>
    <string name="user_event">User Event</string>
    <string name="activities">activities</string>
    <string name="gender">gender</string>
    <string name="age_range">age range</string>
    <string name="genders_to_match">genders to match</string>
    <string name="max_distance">max distance</string>
    <string name="bio">bio</string>
    <string name="city">city</string>
    <string name="matching_options">matching options</string>
    <string name="search_options">search options</string>
    <string name="opted_in_to_promotional_emails">promotional email opt in</string>
    <string name="phone_number_text_input_layout_content_description">Text field to enter phone number.</string>
    <string name="sms_verification_long_cool_down">An error has occurred, please try again later.</string>
    <string name="terms_of_service_link"><a href="https://letsgoapp.site/terms-of-service/">Terms of Service</a></string>
    <string name="home_screen_terms_of_service_links">By signing up you agree to our <a href="https://letsgoapp.site/terms-of-service/">Terms</a> and <a href="https://letsgoapp.site/end-user-license-agreement/">EULA</a>. See how we use your data in our <a href="https://letsgoapp.site/privacy-policy/">Privacy Policy</a>.</string>
    <string name="activities_shared_enable_location_dialog_message">&app_human_name; requires location to be enabled, do you want to enable it?</string>
    <string name="activities_shared_manually_label_location">Error setting up location. Please manually enable location inside Settings.</string>
    <string name="activities_shared_error_requesting_location">Error occurred when requesting location.</string>
    <string name="activities_shared_error_requesting_location_manually_enable">Error requesting location. Please make sure to enable location inside Settings.</string>
    <string name="activities_shared_location_snack_bar_message">&app_human_name; requires access to the device location.</string>
    <string name="activities_shared_location_snack_bar_button_name">SETTINGS</string>
    <string name="menu_item_names_leave_chat_room">Leave Chat Room</string>
    <string name="menu_item_names_clear_history">Clear History</string>
    <string name="menu_item_names_block_and_report">&block_and_report;</string>
    <string name="menu_item_names_un_match">@string/un_match</string>
    <string name="menu_item_names_invite_to_chat_room">Invite To Chat Room</string>
    <string name="block_and_report_dialog_title">Report Reason</string>
    <string name="block_and_report_language_text">Language</string>
    <string name="block_and_report_inappropriate_picture_text">Inappropriate picture</string>
    <string name="block_and_report_advertising_text">Advertising</string>
    <string name="block_and_report_other_text">Other</string>
    <string name="block_and_report_text_edit_title">Other Reason</string>
    <string name="block_and_report_text_edit_hint">Reason for reporting this person.</string>
    <string name="chat_messages_channel_name">Chat Messages</string>
    <string name="chat_messages_channel_description">&app_human_name; chat message notification.</string>
    <string name="chat_messages_new_messages">%1$d new messages.</string>
    <string name="chat_messages_across_chat_rooms">Across %1$d chat rooms.</string>
    <string name="chat_messages_across_chat_notification">Chat message notifications.</string>
    <string name="chat_messages_message_heads_up_edited_deleted">%1$s a message.</string>
    <string name="chat_messages_message_heads_up_edited_deleted_placeholder">edited a message.</string>
    <string name="chat_messages_new_match_title">Matched!</string>
    <string name="database_name_account_info_database">account_info_database_name</string>
    <string name="database_name_icons_database">icons_database_name</string>
    <string name="database_name_messages_database">messages_database_name</string>
    <string name="database_name_other_users_database">other_users_database_name</string>
    <string name="clean_database_worker_title_synchronizing">Synchronizing</string>
    <string name="clean_database_worker_name">Synchronization</string>
    <string name="clean_database_worker_description">Running synchronization and various database cleanup methods. This process should only run once a day for a small amount of time.</string>
    <string name="shared_preferences_storage_error_for_too_full_key">storage_error_for_too_full_key</string>
    <string name="user_picture_file_name_prefix">self_picture</string>
    <string name="user_pictures_from_camera_file_prefix">camera_selfie</string>
    <string name="user_temporary_pictures_chat_message_file_prefix">TempChatPic</string>
    <string name="user_picture_chat_message_file_prefix">ChatPic</string>
    <string name="show_rules_rules_title"><b>&app_human_name; Culture Guidelines</b></string>
    <string name="show_rules_intro_text">Welcome to <b>&app_human_name;</b> &amp; the <b>Go Getter</b> community!\n\nWe are EXCITED to have you join us and want to create the BEST EXPERIENCE possible for EVERYONE.\n</string>
    <string name="show_rules_authenticity_title"><b>BE AUTHENTIC:</b></string>
    <string name="show_rules_authenticity_body">Authenticity is vital for <b>Go Getters</b>. You are AMAZING. So be yourself! Please be honest and verify your age, photos, and bio are AUTHENTICALLY you!</string>
    <string name="show_rules_kindness_title"><b>KINDNESS IS KEY:</b></string>
    <string name="show_rules_kindness_body">Treat ALL <b>Go Getters</b> with KINDNESS &amp; RESPECT!</string>
    <string name="show_rules_be_safe_title"><b>BE SAFE &amp; SAVVY:</b></string>
    <string name="show_rules_be_safe_text">Be SAFE &amp; SAVVY about what you share with other <b>Go Getters!</b></string>
    <string name="show_rules_be_toxic_title"><b>DON’T BE TOXIC:</b></string>
    <string name="show_rules_be_toxic_text">Please REPORT all toxic, malicious, or illegal accounts RUINING the <b>&app_human_name;</b> community &amp; culture!</string>
    <string name="get_gender_gender_male">Male</string>
    <string name="get_gender_gender_female">Female</string>
    <string name="get_gender_gender_other">Other</string>
    <string name="get_gender_gender_other_hint">Gender</string>
    <string name="select_categories_anytime_message">Matching with other people interested in \"%1$s\" anytime!</string>
    <string name="stored_user_activity_placeholder_activity_name">Boating</string>
    <string name="stored_user_activity_delete">@string/delete</string>
    <string name="stored_user_activity_time_frames_title">Time Frames</string>
    <string name="stored_user_activity_header_edit_title">\u0020\u0020Edit\u0020\u0020</string>
    <string name="stored_user_activity_header_delete_title">@string/delete</string>
    <string name="stored_user_activity_new_time_frame_button_text">New Time Frame</string>
    <string name="stored_user_activity_maximum_time_frames_reached">Maximum number of time frames reached. Must delete a time frame to add more.</string>
    <string name="chat_member_list_item_thumbnail_image_view_content_description">User Thumbnail</string>
    <string name="chat_member_list_item_user_name_placeholder">@string/name</string>
    <string name="chat_member_list_item_last_seen_placeholder">last seen May 19 at 6:58 PM</string>
    <string name="chat_member_list_item_blocked_text">BLOCKED</string>
    <string name="chat_member_list_item_admin_text">@string/Admin</string>
    <string name="chat_member_list_item_other_user_menu_image_view_content_description">Other user options menu button.</string>
    <string name="chat_member_list_item_event_completed_text">Event Completed</string>
    <string name="chat_room_fragment_popup_menu_new_chat_room">New Chat Room</string>
    <string name="chat_room_fragment_popup_menu_join_chat_room">Join Chat Room</string>
    <string name="chat_room_fragment_popup_menu_search">Search</string>
    <string name="chat_room_fragment_popup_menu_sort_by">Sort By</string>
    <string name="chat_room_fragment_popup_menu_unread">Unread</string>
    <string name="chat_room_fragment_popup_menu_visited">Visited</string>
    <string name="chat_room_fragment_popup_menu_recent">Recent</string>
    <string name="chat_room_fragment_popup_menu_joined">Joined</string>
    <string name="chat_room_info_fragment_popup_menu_block_and_report">Block &amp; Report</string>
    <string name="chat_room_info_fragment_popup_menu_unblock">Unblock</string>
    <string name="chat_room_info_fragment_popup_menu_invite_to_chat_room">Invite To Chat Room</string>
    <string name="chat_room_info_fragment_popup_menu_promote_to_admin">Promote To Admin</string>
    <string name="chat_room_info_fragment_popup_menu_kick">Kick</string>
    <string name="chat_room_info_fragment_popup_menu_ban">Ban</string>
    <string name="chat_room_messages_popup_menu_edit">Edit</string>
    <string name="chat_room_messages_popup_menu_reply">Reply</string>
    <string name="chat_room_messages_popup_menu_delete">Delete</string>
    <string name="chat_room_messages_popup_menu_copy">Copy</string>
</resources>