<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatRoomMessagesPopupMenuEditItem"
        android:icon="@drawable/icon_menu_edit"
        android:title="@string/chat_room_messages_popup_menu_edit" />
    <item
        android:id="@+id/chatRoomMessagesPopupMenuReplyItem"
        android:icon="@drawable/icon_menu_reply"
        android:title="@string/chat_room_messages_popup_menu_reply" />
    <item
        android:id="@+id/chatRoomMessagesPopupMenuDeleteItem"
        android:icon="@drawable/icon_menu_delete"
        android:title="@string/chat_room_messages_popup_menu_delete" />
    <item
        android:id="@+id/chatRoomMessagesPopupMenuCopyItem"
        android:icon="@drawable/icon_menu_copy"
        android:title="@string/chat_room_messages_popup_menu_copy" />

</menu>